Fixed Challenges, add table and scrollbar CSS

--- a/FrontEnd/src/components/Table/ChallengeTable.css
+++ b/FrontEnd/src/components/Table/ChallengeTable.css
@@ -5,9 +5,59 @@
 }
 
 .table-container {
-  border: 1px solid #eeccee;
   max-height: 300px;
   overflow-y: scroll;
-  width: 90%;
+  width: 81%;
   margin:auto;
+  margin-top: 3%;
+  margin-bottom: 3%;
 }
+
+.ch-table {
+  border: none;
+}
+
+.ch-table thead th {
+  background-color: #383e42;
+  color: rgb(255, 255, 255);
+  border: none;
+}
+
+.ch-table thead th:first-child {
+  border-radius: 3px 0 0 3px;
+}
+.ch-table thead th:last-child {
+  border-radius: 0 3px 3px 0;
+}
+
+.ch-table tbody td {
+  border-top: solid 1px #c2bfba;
+  border: none;
+  background-color: #ffffff;
+  height: 43px;
+}
+.ch-table tbody tr:last-child td:first-child {
+  border-radius: 0 0 0 10px;   
+}
+
+.ch-table tbody tr:last-child td:last-child {
+  border-radius: 0 0 10px 0;
+}
+
+.ch-table tbody tr {
+  border: 1px solid white;  
+}
+
+
+.ch-table tbody tr:first-child td {
+  background-color: #fde68b
+}
+
+.ch-table tbody tr:nth-child(2) td {
+  background-color: #bfc5c9
+}
+
+.ch-table tbody tr:nth-child(3) td {
+  background-color: #d1c6b6
+}
+
